--- a/index.html
+++ b/index.html
@@ -20,69 +20,88 @@
   </style>
 </head>
 <body>
-  <header>
-    <a href="index.html" id="logo"><img src="images/logo.svg" alt="Fylo Logo"/></a>
+  <div class="contained">
+    <header>
+      <a href="index.html" id="logo"><img src="images/logo.svg" alt="Fylo Logo"/></a>
 
-    <nav>
-      <ul>
-        <li><a href="#">Features</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Sign In</a></li>
-      </ul>
-    </nav>
+      <nav>
+        <ul>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
 
-  </header>
+    </header>
 
-  
+    <section class="featured">
+      <div class="col-1 left">
+        <h1>All your files in one secure location, accessible anywhere.</h1>
+        <p>
+          Fylo stores your most important files in one secure location. <br />
+    Access them wherever you need, share and collaborate with friends, 
+    family, <br />
+    and co-workers.
+        </p>
 
-  All your files in one secure location, accessible anywhere.
+        <div>
+          <!--The search bar place-->
+        </div>
+      </div>
 
-  Fylo stores your most important files in one secure location. 
-  Access them wherever you need, share and collaborate with friends, 
-  family, and co-workers.
+      <div class="col-1 right img-holder">
+        <img id="img-1" src="images/illustration-1.svg" alt="business image"/>
+      </div>
 
-  Get Started
+    </section>
 
-  Stay productive, wherever you are
+    
 
-  Never let location be an issue when accessing your files. Fylo has you 
-  covered for all of your file storage needs.
 
-  Securely share files and folders with friends, family and colleagues for 
-  live collaboration. No email attachments required!
 
-  See how Fylo works
+    Get Started
 
-  Fylo has improved our team productivity by an order of magnitude. Since 
-  making the switch our team has become a well-oiled collaboration machine.
+    Stay productive, wherever you are
 
-  Kyle Burton
-  Founder & CEO, Huddle
+    Never let location be an issue when accessing your files. Fylo has you 
+    covered for all of your file storage needs.
 
-  Get early access today
+    Securely share files and folders with friends, family and colleagues for 
+    live collaboration. No email attachments required!
 
-  It only takes a minute to sign up and our free starter tier is extremely generous. 
-  If you have any questions, our support team would be happy to help you.
+    See how Fylo works
 
-  Get Started For Free
+    Fylo has improved our team productivity by an order of magnitude. Since 
+    making the switch our team has become a well-oiled collaboration machine.
 
-  Phone: +1-543-123-4567
-  example@fylo.com
+    Kyle Burton
+    Founder & CEO, Huddle
 
-  About Us
-  Jobs
-  Press
-  Blog
+    Get early access today
 
-  Contact Us
-  Terms
-  Privacy
+    It only takes a minute to sign up and our free starter tier is extremely generous. 
+    If you have any questions, our support team would be happy to help you.
 
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Emily Taylor</a>.
-    </p>
-  </footer>
+    Get Started For Free
+
+    Phone: +1-543-123-4567
+    example@fylo.com
+
+    About Us
+    Jobs
+    Press
+    Blog
+
+    Contact Us
+    Terms
+    Privacy
+
+    <footer>
+      <p class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="#">Emily Taylor</a>.
+      </p>
+    </footer>
+  </div>
 </body>
 </html>
