--- a/index.html
+++ b/index.html
@@ -46,58 +46,90 @@
     </header>
   </div>
 
-  <section class="featured">
-    <div class="col-1 left-f">
-      <div>
-        <h1>All your files in one secure location, accessible anywhere.</h1>
-        <p>
-          Fylo stores your most important files in one secure location. <br />
-          Access them wherever you need, share and collaborate with friends,
-          family, and co-workers.
-        </p>
+  <section>
+    <div class="container featured">
+      <div class="col-1 left-f">
+        <div>
+          <h1>All your files in one secure location, accessible anywhere.</h1>
+          <p>
+            Fylo stores your most important files in one secure location. <br />
+            Access them wherever you need, share and collaborate with friends,
+            family, and co-workers.
+          </p>
+        </div>
+
+        <div>
+          <!--The search bar place-->
+          <div class="search-div">
+            <p class="searchbar">Put email here</p>
+            <p class="button">Get Started</p>
+          </div>
+
+        </div>
       </div>
 
-      <div>
-        <!--The search bar place-->
+      <div class="col-1 right img-holder">
+        <img id="img-1" src="images/illustration-1.svg" alt="business image" />
       </div>
-    </div>
-
-    <div class="col-1 right img-holder">
-      <img id="img-1" src="images/illustration-1.svg" alt="business image" />
     </div>
 
   </section>
 
+  <section class="space-above">
+    <div class="container productive">
+      <div class="col-2-left">
+        <h1>Stay productive, wherever you are</h1>
+        <p>
+          Never let location be an issue when accessing your files. Fylo has you <br />
+          covered for all of your file storage needs.
+        </p>
+        <p>
+          Securely share files and folders with friends, family and colleagues for <br />
+          live collaboration. No email attachments required!
+        </p>
+
+        <a>See How Fylo Works <img src="images/icon-arrow.svg"></a>
+
+        <div class="quote">
+          <img src="images/icon-quotes.svg" />
+          <p>Fylo has improved our team productivity by an order of magnitude. Since
+            making the switch our team has become a well-oiled collaboration machine.</p>
+          
+          <img src="images/avatar-testimonial.jpg"/>
+          <p>Kyle Burton </p>
+          <p>Founder & CEO, Huddle</p>
+
+        </div>
+
+      </div>
+
+      <div class="col-2-right">
+        <img id="img-2" src="images/illustration-2.svg" alt="illustation"/>
+      </div>
+    </div>
+  </section>
 
 
+  <section class="get-started">
+    <div class="container starting-now">
+      <div class="col-3">
+        <h2>Get early access today</h2>
+        <p>
+          It only takes a minute to sign up and our free starter tier is extremely generous.
+          If you have any questions, our support team would be happy to help you.
+        </p>
 
+      </div>
 
-  Get Started
+      <div class="col-3">
+        <p>Insert Email</p>
+        <p class="button">Get Started For Free</p>
 
-  Stay productive, wherever you are
+      </div>
 
-  Never let location be an issue when accessing your files. Fylo has you
-  covered for all of your file storage needs.
-
-  Securely share files and folders with friends, family and colleagues for
-  live collaboration. No email attachments required!
-
-  See how Fylo works
-
-  Fylo has improved our team productivity by an order of magnitude. Since
-  making the switch our team has become a well-oiled collaboration machine.
-
-  Kyle Burton
-  Founder & CEO, Huddle
-
-  Get early access today
-
-  It only takes a minute to sign up and our free starter tier is extremely generous.
-  If you have any questions, our support team would be happy to help you.
-
-  Get Started For Free
-
-
+    </div>
+    
+  </section>
 
   <footer>
     <div class="container">
