--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div>
           <h1>All your files in one secure location, accessible anywhere.</h1>
           <p>
-            Fylo stores your most important files in one secure location. <br />
+            Fylo stores your most important files in one secure location.
             Access them wherever you need, share and collaborate with friends,
             family, and co-workers.
           </p>
@@ -71,7 +71,7 @@
 
   </section>
 
-  <section class="space-above">
+  <!-- <section class="space-above">
     <div class="container productive">
       <div class="col-2-left">
         <h1>Stay productive, wherever you are</h1>
@@ -109,7 +109,7 @@
         <img id="img-2" src="images/illustration-2.svg" alt="illustation" />
       </div>
     </div>
-  </section>
+  </section> -->
 
 
   <section class="get-started">
